# personal-kb-structure

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
agent-integration/: hooks.snippet.json  install-codex.sh  merge-codex-hooks.py
agent-integration/hooks/claude/: kb-session-context.sh  kb-stop-prompt.sh
agent-integration/hooks/codex/: kb_session_context.py  kb_stop_prompt.py
agent-integration/hooks/lib/: kb-session-context.py  kb-stop-prompt.py
claude-integration/: README.md  claude.md.snippet  install.sh  merge-settings.py  settings.snippet.json
claude-integration/hooks/: kb-session-context.sh  kb-stop-prompt.sh
docs/: constitution.md  plan.md  spec.md  tasks.md
docs/decisions/: 001-two-repo-design.md  002-file-based-note-ids.md  003-frontmatter-soft-validation.md  004-hybrid-fts5-lancedb-rrf.md  005-chunk-level-indexing.md  006-metadata-prefixed-embeddings.md  007-fts-query-syntax-fallback.md  008-per-note-rrf-deduplication.md  009-ollama-local-embeddings.md  010-fixed-embedding-dimension.md  011-lazy-vector-embed-import.md  012-immediate-reindex-on-capture.md  013-http-transport-shared-daemon.md  014-claude-json-mcp-registration.md  015-incremental-mtime-reindex.md  016-wikilink-backlink-graph.md  017-systemd-user-units.md
kb/: __init__.py  chunk.py  cli.py  config.py  embed.py  frontmatter.py  fts.py  indexer.py  search.py  search_helpers.py  server.py  vector.py
systemd/: install.sh  kb-mcp-server.service  kb-watch.service
vault/: .gitignore
vault/_meta/: frontmatter.md  tags.md
vault/domains/: clojure-overview.md
(+13 files in other folders)
